Wed Aug 17 04:54:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_pkey.c: corrected docs, OpenSSL::PKey::DH does
	  *not* support #sign/verify.

Tue Aug 16 18:56:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_threadptr_data_type): rename to hide.
	  [ruby-core:38972]

Tue Aug 16 18:52:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/mkexports.rb (Exports::Mswin#each_export): exclude Init_
	  and _threadptr_ functions, as well as mingw.

Tue Aug 16 09:31:44 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/dl:  Add documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #5192]

Tue Aug 16 08:48:26 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/.document (fiddle):  Remove duplicate entry
	* ext/fiddle:  Complete documentation of Fiddle.  Patch by Vincent
	  Batts.  [#5192]

Tue Aug 16 08:00:15 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/socket:  Make Socket documentation appear.  Add documentation for
	  Socket, TCPServer, SOCKSSocket.  Patch by Sylvain Daubert.
	  [Ruby 1.9 - Feature #5182]

Mon Aug 15 09:58:55 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl.c: Support disabling OpenSSL compression.
	* test/openssl/test_ssl.rb: Add a test for it.
	  Thanks to Eric Wong for the patch.
	  [Ruby 1.9 - Feature #5183] [ruby-core:38911]

Sun Aug 14 05:57:01 2011  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_connect_timeout): added a test
	  based on a patch by Eric Wong.  [ruby-core:38910]

Sat Aug 13 22:17:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb: do not make the entries related to sitedir and
	  verdordir if disabled by --without options.  [ruby-core:38922]
	  [Bug #5187]

Sat Aug 13 17:03:22 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: [ruby-core:38861]

Sat Aug 13 09:39:07 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_*.rb: added tests.
